# mytime-back-end

./: build_files.sh  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
mytime/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mytime/templates/: index.html
users/: urls.py
users/serializers/: user.py
users/views/: auth.py  users.py
