[tool.poetry]
name = "mytime"
version = "0.1.0"
description = "A Time Booking System"
authors = ["Bilal Arif"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^5.1.3"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
